css/src/_showcase.scss
.showcase {
	position: relative;
	overflow: hidden;
	height: 0;
	transition: height 300ms ease-in-out;
	background: $black;
	z-index: 0;
	margin-bottom: 30px;

	.slide {
		position: absolute;
		top: 0;
		left: 100%;
		right: -100%;
		opacity: 0;
		transition: left 400ms ease-in-out, right 400ms ease-in-out, opacity 400ms ease-in-out;

		&.visible {
			left: 0;
			right: 0;
			opacity: 1;
			z-index: 0;
		}

		&.hide-left {
			left: -100%;
			right: 100%;
			opacity: 0;
		}
		
		a {
			display: block;
			@include clearfix;
		}

		img {
			width: 100%;
			height: auto !important;
			display: block;
		}
		
		.slide-content {
			position: absolute;
			top: 5%;
			right: 60px;
			left: 60px;
			bottom: 0;
			color: white;
			pointer-events: none;

			@include respond-to( 1220px ) {
				top: 60px;
			}

			.wrap {
				@include respond-to( 768px ) {
					padding-right: 280px;
				}
				@include respond-to( 1024px ) {
					padding-right: 380px;
				}
				@include respond-to( 1220px ) {
					padding-right: 580px;
				}
			}
		}
		
		h1 {
			font-weight: 700;
			padding: 0;
			color: white;
			font-size: 18px;
			line-height: 1.2em;
			text-shadow: 0 0 20px rgba( black, .5 );
			text-transform: uppercase;
			padding: 3px 0;

			@include respond-to( 600px ) {
				font-size: 25px; 
			}

			@include respond-to( 768px ) {
				margin-bottom: 1%;
				font-size: 40px; 
			}

			@include respond-to( 1024px ) {
				margin-bottom: 2%;
				font-size: 50px; 
			}
		}

		h2 {
			font-weight: 400;
			padding: 0;
			font-size: 12px;
			line-height: 1.3em;
			text-shadow: 0 0 20px rgba( black, .7 );
			padding: 3px 0;

			@include respond-to( 600px ) {
				font-size: 15px; 
			}

			@include respond-to( 768px ) {
				margin-bottom: 2%;
				font-size: 20px; 
				line-height: 1.4em;
			}

			@include respond-to( 1024px ) {
				margin-bottom: 4%;
				line-height: 1.5em;
			}
		}

		.slide-button {
			padding: 6px;
			box-shadow: 0 0 20px rgba( black, .5 );
			transition: 400ms background ease-in-out;
			margin-top: 3px;
			text-transform: uppercase;
			background: $teal;
			position: absolute;	
			bottom: 0;
			right: -60px;
			left: -60px;
			text-align: center;

			@include respond-to( 600px ) {
				max-width: 70%;
				padding: 6px 10px;
				font-size: 15px; 
				display: inline-block;
				position: static;
				border: 2px solid white;
				text-shadow: 0 0 20px rgba( black, .5 );
				background: transparent;
			}

			@include respond-to( 768px ) {
				max-width: 100%;
				padding: 10px 15px;
				font-size: 20px; 
				background: transparent;
			}
		}
		
		&:hover .slide-button {
			text-shadow: none;
			background: $teal;
		}
	}

	.showcase-nav a {
		position: absolute;
		top: 50%;
		cursor: pointer;
		border-radius: 50%;
		background: $red-dark;
		width: 50px;
		height: 50px;
		margin-top: -25px;
		text-indent: -300px;
		overflow: hidden;
		opacity: .7;
	
		@include respond-to( 768px ) {
			width: 80px;
			height: 80px;
			margin-top: -40px;
		}

		&:hover {
			opacity: 1;
		}

		&.previous {
			left: -5px;
			background: $red-dark url(../img/slider-arrow-left.png) right center no-repeat;
			border-top-left-radius: 0;
			border-bottom-left-radius: 0;

			@include respond-to( 768px ) {
				left: -30px;
			}
		}

		&.next {
			right: -5px;
			background: $red-dark url(../img/slider-arrow-right.png) left center no-repeat;
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;

			@include respond-to( 768px ) {
				right: -30px;
			}
		}
	}
}



.showcase.stats {
	background: #ebeae9;
	margin-bottom: 30px;
	border-bottom: 1px solid #ccc;
	@include clearfix;
	@include respond-to( 768px ) {
		height: 0;
		position: relative;
		overflow: hidden;
		transition: height 300ms ease-in-out;
		z-index: 0;
	}

	@include respond-to( 1024px ) {
		border-bottom: 0;
	}
	
	.slide-wrapper {
		max-width: 1220px;
		margin: 0 auto;
		background: white;
		box-shadow: 0 0 20px rgba( black, .1 );
		@include clearfix;

		@include respond-to( 1024px ) {
			margin: 40px auto;
		}
	}

	.slide {
		display: none;

		@include respond-to( 768px ) {
			display: block;
			position: absolute;
			top: 0;
			left: 100%;
			right: -100%;
			opacity: 0;
			transition: left 400ms ease-in-out, right 400ms ease-in-out, opacity 400ms ease-in-out;
		}	

		&.visible {
			display: block;

			@include respond-to( 768px ) {
				opacity: 1;
				left: 0;
				right: 0;
				z-index: 0;
			}
		}

		&.hide-left {
			display: none;

			@include respond-to( 768px ) {
				display: block;
				left: -100%;
				right: 100%;
				opacity: 0;
			}
		}
		
		a {
			display: block;
			@include clearfix;
		}

		img {
			width: 100%;
			height: auto !important;
			display: block;

			@include respond-to( 768px ) {
				width: 65%;
				float: right;
			}
		}
		
		.slide-content {
			position: static;
			top: auto;
			right: auto;
			left: auto;
			background: white;
			opacity: .8;
			padding: 12px;
			border-radius: 0;

			@include respond-to( 768px ) {
				padding: 25px;
				width: 35%;
				float: right;
			}
		}
		
		h1 {
			font-weight: 700;
			padding: 0;
			color: $red-dark;
			text-shadow: none;

			font-size: 18px;
			@include respond-to( 768px ) { font-size: 22px; }
		}

		h2 {
			font-weight: 400;
			padding: 0;
			font-size: 13px;
			line-height: 20px;
			color: $grey;
			text-shadow: none;
		}
	}

	.showcase-nav a {
		position: absolute;
		top: 50%;
		margin-top: -40px;
		cursor: pointer;
		border-radius: 50%;
		background: $red-dark;
		width: 80px;
		height: 80px;
		text-indent: -300px;
		overflow: hidden;
		opacity: .7;

		&:hover {
			opacity: 1;
		}

		&.previous {
			left: -30px;
			background: $red-dark url(../img/slider-arrow-left.png) right center no-repeat;
			border-top-left-radius: 0;
			border-bottom-left-radius: 0;
		}

		&.next {
			right: -30px;
			background: $red-dark url(../img/slider-arrow-right.png) left center no-repeat;
			border-top-right-radius: 0;
			border-bottom-right-radius: 0;
		}
	}
}

